final version of the crud logic
